Added assosiatedWith rel

--- a/qcy/sections/crossref-en.html
+++ b/qcy/sections/crossref-en.html
@@ -203,13 +203,13 @@ This section provides details for each class and property defined by The QAECY O
     is in domain of
    </dt>
    <dd>
-    <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">adjacent element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">contains element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">contains floor</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">contains space</a> <sup class="type-op" title="object property">op</sup>, <a href="#endDate" title="https://qaecy.com/dev/ont#endDate">end date</a> <sup class="type-op" title="object property">op</sup>, <a href="#entityCategory" title="https://qaecy.com/dev/ont#entityCategory">entity category</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasEmailAddress" title="https://qaecy.com/dev/ont#hasEmailAddress">has email address</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasMaterial" title="https://qaecy.com/dev/ont#hasMaterial">has material</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasProperty" title="https://qaecy.com/dev/ont#hasProperty">has property</a> <sup class="type-op" title="object property">op</sup>, <a href="#relatedEntity" title="https://qaecy.com/dev/ont#relatedEntity">related entity</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresEquipment" title="https://qaecy.com/dev/ont#requiresEquipment">requires equipment</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresMaterial" title="https://qaecy.com/dev/ont#requiresMaterial">requires material</a> <sup class="type-op" title="object property">op</sup>, <a href="#startDate" title="https://qaecy.com/dev/ont#startDate">start date</a> <sup class="type-op" title="object property">op</sup>
+    <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">adjacent element</a> <sup class="type-op" title="object property">op</sup>, <a href="#associatedWith" title="https://qaecy.com/dev/ont#associatedWith">assosiated with</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">contains element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">contains floor</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">contains space</a> <sup class="type-op" title="object property">op</sup>, <a href="#endDate" title="https://qaecy.com/dev/ont#endDate">end date</a> <sup class="type-op" title="object property">op</sup>, <a href="#entityCategory" title="https://qaecy.com/dev/ont#entityCategory">entity category</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasEmailAddress" title="https://qaecy.com/dev/ont#hasEmailAddress">has email address</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasMaterial" title="https://qaecy.com/dev/ont#hasMaterial">has material</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasProperty" title="https://qaecy.com/dev/ont#hasProperty">has property</a> <sup class="type-op" title="object property">op</sup>, <a href="#relatedEntity" title="https://qaecy.com/dev/ont#relatedEntity">related entity</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresEquipment" title="https://qaecy.com/dev/ont#requiresEquipment">requires equipment</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresMaterial" title="https://qaecy.com/dev/ont#requiresMaterial">requires material</a> <sup class="type-op" title="object property">op</sup>, <a href="#startDate" title="https://qaecy.com/dev/ont#startDate">start date</a> <sup class="type-op" title="object property">op</sup>
    </dd>
    <dt>
     is in range of
    </dt>
    <dd>
-    <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">adjacent element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">contains element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">contains floor</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">contains space</a> <sup class="type-op" title="object property">op</sup>, <a href="#endDate" title="https://qaecy.com/dev/ont#endDate">end date</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasEmailAddress" title="https://qaecy.com/dev/ont#hasEmailAddress">has email address</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasMaterial" title="https://qaecy.com/dev/ont#hasMaterial">has material</a> <sup class="type-op" title="object property">op</sup>, <a href="#relatedEntity" title="https://qaecy.com/dev/ont#relatedEntity">related entity</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresEquipment" title="https://qaecy.com/dev/ont#requiresEquipment">requires equipment</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresMaterial" title="https://qaecy.com/dev/ont#requiresMaterial">requires material</a> <sup class="type-op" title="object property">op</sup>, <a href="#startDate" title="https://qaecy.com/dev/ont#startDate">start date</a> <sup class="type-op" title="object property">op</sup>
+    <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">adjacent element</a> <sup class="type-op" title="object property">op</sup>, <a href="#associatedWith" title="https://qaecy.com/dev/ont#associatedWith">assosiated with</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">contains element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">contains floor</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">contains space</a> <sup class="type-op" title="object property">op</sup>, <a href="#endDate" title="https://qaecy.com/dev/ont#endDate">end date</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasEmailAddress" title="https://qaecy.com/dev/ont#hasEmailAddress">has email address</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasMaterial" title="https://qaecy.com/dev/ont#hasMaterial">has material</a> <sup class="type-op" title="object property">op</sup>, <a href="#relatedEntity" title="https://qaecy.com/dev/ont#relatedEntity">related entity</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresEquipment" title="https://qaecy.com/dev/ont#requiresEquipment">requires equipment</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresMaterial" title="https://qaecy.com/dev/ont#requiresMaterial">requires material</a> <sup class="type-op" title="object property">op</sup>, <a href="#startDate" title="https://qaecy.com/dev/ont#startDate">start date</a> <sup class="type-op" title="object property">op</sup>
    </dd>
    <dt>
     is disjoint with
@@ -602,6 +602,7 @@ This section provides details for each class and property defined by The QAECY O
   <li><a href="#alternativeRepresentation" title="https://qaecy.com/dev/ont#alternativeRepresentation">alternative representation</a></li>
   <li><a href="#applicableObjectCategories" title="https://qaecy.com/dev/ont#applicableObjectCategories">applicable object categories</a></li>
   <li><a href="#applicableSubjectCategories" title="https://qaecy.com/dev/ont#applicableSubjectCategories">applicable subject categories</a></li>
+  <li><a href="#associatedWith" title="https://qaecy.com/dev/ont#associatedWith"> <span>assosiated with</span> </a></li>
   <li><a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement"> <span>contains element</span> </a></li>
   <li><a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor"> <span>contains floor</span> </a></li>
   <li><a href="#containsFragment" title="https://qaecy.com/dev/ont#containsFragment">contains fragment</a></li>
@@ -747,6 +748,38 @@ This section provides details for each class and property defined by The QAECY O
     </dt>
     <dd>
      <a href="#EntityCategory" title="https://qaecy.com/dev/ont#EntityCategory">Entity Category</a> <sup class="type-c" title="class">c</sup>
+    </dd>
+   </dl>
+  </div>
+ </div>
+ <div class="entity" id="associatedWith">
+  <h3>assosiated with<sup class="type-op" title="object property">op</sup> <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#objectproperties">Object Property ToC</a> </span></h3>
+  <p><strong>IRI:</strong> https://qaecy.com/dev/ont#associatedWith</p>
+  <div class="description">
+   <dl>
+    <dt>
+     has super-properties
+    </dt>
+    <dd>
+     <a href="#relatedEntity" title="https://qaecy.com/dev/ont#relatedEntity">related entity</a> <sup class="type-op" title="object property">op</sup>
+    </dd>
+    <dt>
+     has domain
+    </dt>
+    <dd>
+     <a href="#EntityReference" title="https://qaecy.com/dev/ont#EntityReference">Entity Reference</a> <sup class="type-c" title="class">c</sup>
+    </dd>
+    <dt>
+     has range
+    </dt>
+    <dd>
+     <a href="#EntityReference" title="https://qaecy.com/dev/ont#EntityReference">Entity Reference</a> <sup class="type-c" title="class">c</sup>
+    </dd>
+    <dt>
+     is also defined as
+    </dt>
+    <dd>
+     <a href="#associatedWith">named individual</a>
     </dd>
    </dl>
   </div>
@@ -1160,7 +1193,7 @@ This section provides details for each class and property defined by The QAECY O
      has sub-properties
     </dt>
     <dd>
-     <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">adjacent element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">contains element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">contains floor</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">contains space</a> <sup class="type-op" title="object property">op</sup>, <a href="#endDate" title="https://qaecy.com/dev/ont#endDate">end date</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasEmailAddress" title="https://qaecy.com/dev/ont#hasEmailAddress">has email address</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasMaterial" title="https://qaecy.com/dev/ont#hasMaterial">has material</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresEquipment" title="https://qaecy.com/dev/ont#requiresEquipment">requires equipment</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresMaterial" title="https://qaecy.com/dev/ont#requiresMaterial">requires material</a> <sup class="type-op" title="object property">op</sup>, <a href="#startDate" title="https://qaecy.com/dev/ont#startDate">start date</a> <sup class="type-op" title="object property">op</sup>
+     <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">adjacent element</a> <sup class="type-op" title="object property">op</sup>, <a href="#associatedWith" title="https://qaecy.com/dev/ont#associatedWith">assosiated with</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">contains element</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">contains floor</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">contains space</a> <sup class="type-op" title="object property">op</sup>, <a href="#endDate" title="https://qaecy.com/dev/ont#endDate">end date</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasEmailAddress" title="https://qaecy.com/dev/ont#hasEmailAddress">has email address</a> <sup class="type-op" title="object property">op</sup>, <a href="#hasMaterial" title="https://qaecy.com/dev/ont#hasMaterial">has material</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresEquipment" title="https://qaecy.com/dev/ont#requiresEquipment">requires equipment</a> <sup class="type-op" title="object property">op</sup>, <a href="#requiresMaterial" title="https://qaecy.com/dev/ont#requiresMaterial">requires material</a> <sup class="type-op" title="object property">op</sup>, <a href="#startDate" title="https://qaecy.com/dev/ont#startDate">start date</a> <sup class="type-op" title="object property">op</sup>
     </dd>
     <dt>
      has domain
