--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -107,6 +107,11 @@ This ontology has the following classes and properties.</span>
          title="https://qaecy.com/dev/ont#applicableSubjectCategories">applicable subject categories</a>
    </li>
    <li>
+      <a href="#associatedWith" title="https://qaecy.com/dev/ont#associatedWith">
+         <span>assosiated with</span>
+      </a>
+   </li>
+   <li>
       <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">
          <span>contains element</span>
       </a>
