Added annotation property for IRI pattern + one for adjacency between fragments

--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -72,7 +72,9 @@ This ontology has the following classes and properties.</span>
       <a href="#TextDirectiveSelector" title="https://qaecy.com/dev/ont#TextDirectiveSelector">Text Directive Selector</a>
    </li>
    <li>
-      <a href="#TextFragment" title="https://qaecy.com/dev/ont#TextFragment">Text Fragment</a>
+      <a href="#TextFragment" title="https://qaecy.com/dev/ont#TextFragment">
+         <span>Text Fragment</span>
+      </a>
    </li>
    <li>
       <a href="#TextIndexSelector" title="https://qaecy.com/dev/ont#TextIndexSelector">Text Index Selector</a>
@@ -81,7 +83,9 @@ This ontology has the following classes and properties.</span>
       <a href="#TimeRangeSelector" title="https://qaecy.com/dev/ont#TimeRangeSelector">Time Range Selector</a>
    </li>
    <li>
-      <a href="#XYWHSelector" title="https://qaecy.com/dev/ont#XYWHSelector">XYWH Selector</a>
+      <a href="#XYWHSelector" title="https://qaecy.com/dev/ont#XYWHSelector">
+         <span>XYWH Selector</span>
+      </a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -227,6 +231,12 @@ This ontology has the following classes and properties.</span>
       <a href="#suffix" title="https://qaecy.com/dev/ont#suffix">
          <span>file suffix</span>
       </a>
+   </li>
+   <li>
+      <a href="#inferredFragmentType" title="https://qaecy.com/dev/ont#inferredFragmentType">inferred fragment type</a>
+   </li>
+   <li>
+      <a href="#iriPattern" title="https://qaecy.com/dev/ont#iriPattern">IRI pattern</a>
    </li>
    <li>
       <a href="#label" title="https://qaecy.com/dev/ont#label">label</a>
