Added property for adjacency between fragments

--- a/qcy/sections/crossref-en.html
+++ b/qcy/sections/crossref-en.html
@@ -290,13 +290,13 @@ This section provides details for each class and property defined by The QAECY O
     is in domain of
    </dt>
    <dd>
-    <a href="#inferredFragmentType" title="https://qaecy.com/dev/ont#inferredFragmentType">inferred fragment type</a> <sup class="type-dp" title="data property">dp</sup>, <a href="#textRaw" title="https://qaecy.com/dev/ont#textRaw">text raw</a> <sup class="type-dp" title="data property">dp</sup>
+    <a href="#adjacentFragment" title="https://qaecy.com/dev/ont#adjacentFragment">adjacent fragment</a> <sup class="type-op" title="object property">op</sup>, <a href="#inferredFragmentType" title="https://qaecy.com/dev/ont#inferredFragmentType">inferred fragment type</a> <sup class="type-dp" title="data property">dp</sup>, <a href="#textRaw" title="https://qaecy.com/dev/ont#textRaw">text raw</a> <sup class="type-dp" title="data property">dp</sup>
    </dd>
    <dt>
     is in range of
    </dt>
    <dd>
-    <a href="#containsFragment" title="https://qaecy.com/dev/ont#containsFragment">contains fragment</a> <sup class="type-op" title="object property">op</sup>
+    <a href="#adjacentFragment" title="https://qaecy.com/dev/ont#adjacentFragment">adjacent fragment</a> <sup class="type-op" title="object property">op</sup>, <a href="#containsFragment" title="https://qaecy.com/dev/ont#containsFragment">contains fragment</a> <sup class="type-op" title="object property">op</sup>
    </dd>
   </dl>
  </div>
@@ -605,6 +605,7 @@ This section provides details for each class and property defined by The QAECY O
  <ul class="hlist">
   <li><a href="#about" title="https://qaecy.com/dev/ont#about">about</a></li>
   <li><a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement"> <span>adjacent element</span> </a></li>
+  <li><a href="#adjacentFragment" title="https://qaecy.com/dev/ont#adjacentFragment">adjacent fragment</a></li>
   <li><a href="#alternativeRepresentation" title="https://qaecy.com/dev/ont#alternativeRepresentation">alternative representation</a></li>
   <li><a href="#applicableObjectCategories" title="https://qaecy.com/dev/ont#applicableObjectCategories">applicable object categories</a></li>
   <li><a href="#applicableSubjectCategories" title="https://qaecy.com/dev/ont#applicableSubjectCategories">applicable subject categories</a></li>
@@ -685,6 +686,29 @@ This section provides details for each class and property defined by The QAECY O
     </dt>
     <dd>
      <a href="#adjacentElement">named individual</a>
+    </dd>
+   </dl>
+  </div>
+ </div>
+ <div class="entity" id="adjacentFragment">
+  <h3>adjacent fragment<sup class="type-op" title="object property">op</sup> <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#objectproperties">Object Property ToC</a> </span></h3>
+  <p><strong>IRI:</strong> https://qaecy.com/dev/ont#adjacentFragment</p>
+  <div class="comment">
+   <span class="markdown">Relationship between two fragments that are adjacent within the shared parent information object.</span>
+  </div>
+  <div class="description">
+   <dl>
+    <dt>
+     has domain
+    </dt>
+    <dd>
+     <a href="#Fragment" title="https://qaecy.com/dev/ont#Fragment">Fragment</a> <sup class="type-c" title="class">c</sup>
+    </dd>
+    <dt>
+     has range
+    </dt>
+    <dd>
+     <a href="#Fragment" title="https://qaecy.com/dev/ont#Fragment">Fragment</a> <sup class="type-c" title="class">c</sup>
     </dd>
    </dl>
   </div>
