--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -99,6 +99,9 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
+      <a href="#adjacentFragment" title="https://qaecy.com/dev/ont#adjacentFragment">adjacent fragment</a>
+   </li>
+   <li>
       <a href="#alternativeRepresentation"
          title="https://qaecy.com/dev/ont#alternativeRepresentation">alternative representation</a>
    </li>
