--- a/enum/sections/overview-en.html
+++ b/enum/sections/overview-en.html
@@ -5,132 +5,234 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
-      <a href="#3DModel" title="https://qaecy.com/dev/enum#3DModel">3D Model</a>
+      <a href="#ThreeDFileContent" title="https://dev.qaecy.com/enum#ThreeDFileContent">3D File Content</a>
    </li>
    <li>
-      <a href="#Activity" title="https://qaecy.com/dev/enum#Activity">Activity</a>
+      <a href="#Activity" title="https://dev.qaecy.com/enum#Activity">Activity</a>
    </li>
    <li>
-      <a href="#AWS" title="https://qaecy.com/dev/enum#AWS">Amazon Web Services</a>
+      <a href="#AWS" title="https://dev.qaecy.com/enum#AWS">Amazon Web Services</a>
    </li>
    <li>
-      <a href="#Azure" title="https://qaecy.com/dev/enum#Azure">Azure</a>
+      <a href="#ArchiveFileContent" title="https://dev.qaecy.com/enum#ArchiveFileContent">Archive File Content</a>
    </li>
    <li>
-      <a href="#Balcony" title="https://qaecy.com/dev/enum#Balcony">Balcony</a>
+      <a href="#AudioFileContent" title="https://dev.qaecy.com/enum#AudioFileContent">Audio File Content</a>
    </li>
    <li>
-      <a href="#Beam" title="https://qaecy.com/dev/enum#Beam">Beam</a>
+      <a href="#AutomationFileContent" title="https://dev.qaecy.com/enum#AutomationFileContent">Automation File Content</a>
    </li>
    <li>
-      <a href="#BIMFileContent" title="https://qaecy.com/dev/enum#BIMFileContent">BIM File Content</a>
+      <a href="#Azure" title="https://dev.qaecy.com/enum#Azure">Azure</a>
    </li>
    <li>
-      <a href="#Building" title="https://qaecy.com/dev/enum#Building">Building</a>
+      <a href="#BackupFileContent" title="https://dev.qaecy.com/enum#BackupFileContent">Backup File Content</a>
    </li>
    <li>
-      <a href="#BuildingElement" title="https://qaecy.com/dev/enum#BuildingElement">Building Element</a>
+      <a href="#Balcony" title="https://dev.qaecy.com/enum#Balcony">Balcony</a>
    </li>
    <li>
-      <a href="#BuildingPermit" title="https://qaecy.com/dev/enum#BuildingPermit">Building Permit</a>
+      <a href="#Beam" title="https://dev.qaecy.com/enum#Beam">Beam</a>
    </li>
    <li>
-      <a href="#CADFileContent" title="https://qaecy.com/dev/enum#CADFileContent">CAD File Content</a>
+      <a href="#BIMFileContent" title="https://dev.qaecy.com/enum#BIMFileContent">BIM File Content</a>
    </li>
    <li>
-      <a href="#ChangeOrder" title="https://qaecy.com/dev/enum#ChangeOrder">Change Order</a>
+      <a href="#BinaryFileContent" title="https://dev.qaecy.com/enum#BinaryFileContent">Binary File Content</a>
    </li>
    <li>
-      <a href="#Column" title="https://qaecy.com/dev/enum#Column">Column</a>
+      <a href="#Building" title="https://dev.qaecy.com/enum#Building">Building</a>
    </li>
    <li>
-      <a href="#Contract" title="https://qaecy.com/dev/enum#Contract">Contract</a>
+      <a href="#BuildingElement" title="https://dev.qaecy.com/enum#BuildingElement">Building Element</a>
    </li>
    <li>
-      <a href="#Date" title="https://qaecy.com/dev/enum#Date">Date</a>
+      <a href="#BuildingPermit" title="https://dev.qaecy.com/enum#BuildingPermit">Building Permit</a>
    </li>
    <li>
-      <a href="#Drawing" title="https://qaecy.com/dev/enum#Drawing">Drawing</a>
+      <a href="#BuildingZone" title="https://dev.qaecy.com/enum#BuildingZone">Building Zone</a>
    </li>
    <li>
-      <a href="#EmailAddress" title="https://qaecy.com/dev/enum#EmailAddress">Email Address</a>
+      <a href="#BuildingStoreyInterface"
+         title="https://dev.qaecy.com/enum#BuildingStoreyInterface">Building/Storey Interface</a>
    </li>
    <li>
-      <a href="#Equipment" title="https://qaecy.com/dev/enum#Equipment">Equipment</a>
+      <a href="#CADFileContent" title="https://dev.qaecy.com/enum#CADFileContent">CAD File Content</a>
    </li>
    <li>
-      <a href="#Facade" title="https://qaecy.com/dev/enum#Facade">Facade</a>
+      <a href="#ChangeOrder" title="https://dev.qaecy.com/enum#ChangeOrder">Change Order</a>
    </li>
    <li>
-      <a href="#Floor" title="https://qaecy.com/dev/enum#Floor">Floor</a>
+      <a href="#Column" title="https://dev.qaecy.com/enum#Column">Column</a>
    </li>
    <li>
-      <a href="#GCP" title="https://qaecy.com/dev/enum#GCP">Google Cloud Platform</a>
+      <a href="#Contract" title="https://dev.qaecy.com/enum#Contract">Contract</a>
    </li>
    <li>
-      <a href="#LocalProvider" title="https://qaecy.com/dev/enum#LocalProvider">Local provider</a>
+      <a href="#DataFileContent" title="https://dev.qaecy.com/enum#DataFileContent">Data File Content</a>
    </li>
    <li>
-      <a href="#Location" title="https://qaecy.com/dev/enum#Location">Location</a>
+      <a href="#Date" title="https://dev.qaecy.com/enum#Date">Date</a>
    </li>
    <li>
-      <a href="#Material" title="https://qaecy.com/dev/enum#Material">Material</a>
+      <a href="#Door" title="https://dev.qaecy.com/enum#Door">Door</a>
    </li>
    <li>
-      <a href="#ObjectId" title="https://qaecy.com/dev/enum#ObjectId">ObjectId</a>
+      <a href="#Drawing" title="https://dev.qaecy.com/enum#Drawing">Drawing</a>
    </li>
    <li>
-      <a href="#Organization" title="https://qaecy.com/dev/enum#Organization">Organization</a>
+      <a href="#ElementAdjacentElementInterface"
+         title="https://dev.qaecy.com/enum#ElementAdjacentElementInterface">Element/Adjacent element Interface</a>
    </li>
    <li>
-      <a href="#OtherContent" title="https://qaecy.com/dev/enum#OtherContent">Other content</a>
+      <a href="#EmailAddress" title="https://dev.qaecy.com/enum#EmailAddress">Email Address</a>
    </li>
    <li>
-      <a href="#Person" title="https://qaecy.com/dev/enum#Person">Person</a>
+      <a href="#EmailFileContent" title="https://dev.qaecy.com/enum#EmailFileContent">Email File Content</a>
    </li>
    <li>
-      <a href="#Project" title="https://qaecy.com/dev/enum#Project">Project</a>
+      <a href="#Equipment" title="https://dev.qaecy.com/enum#Equipment">Equipment</a>
    </li>
    <li>
-      <a href="#Regulation" title="https://qaecy.com/dev/enum#Regulation">Regulation</a>
+      <a href="#Facade" title="https://dev.qaecy.com/enum#Facade">Facade</a>
    </li>
    <li>
-      <a href="#Report" title="https://qaecy.com/dev/enum#Report">Report</a>
+      <a href="#FontFileContent" title="https://dev.qaecy.com/enum#FontFileContent">Font File Content</a>
    </li>
    <li>
-      <a href="#Requirement" title="https://qaecy.com/dev/enum#Requirement">Requirement</a>
+      <a href="#GeospatialFileContent" title="https://dev.qaecy.com/enum#GeospatialFileContent">Geospatial File Content</a>
    </li>
    <li>
-      <a href="#Roof" title="https://qaecy.com/dev/enum#Roof">Roof</a>
+      <a href="#GCP" title="https://dev.qaecy.com/enum#GCP">Google Cloud Platform</a>
    </li>
    <li>
-      <a href="#Site" title="https://qaecy.com/dev/enum#Site">Site</a>
+      <a href="#ImageFileContent" title="https://dev.qaecy.com/enum#ImageFileContent">Image File Content</a>
    </li>
    <li>
-      <a href="#Slab" title="https://qaecy.com/dev/enum#Slab">Slab</a>
+      <a href="#InstallerFileContent" title="https://dev.qaecy.com/enum#InstallerFileContent">Installer File Content</a>
    </li>
    <li>
-      <a href="#Space" title="https://qaecy.com/dev/enum#Space">Space</a>
+      <a href="#Interface" title="https://dev.qaecy.com/enum#Interface">Interface</a>
    </li>
    <li>
-      <a href="#Specification" title="https://qaecy.com/dev/enum#Specification">Specification</a>
+      <a href="#LocalProvider" title="https://dev.qaecy.com/enum#LocalProvider">Local provider</a>
    </li>
    <li>
-      <a href="#Stair" title="https://qaecy.com/dev/enum#Stair">Stair</a>
+      <a href="#Location" title="https://dev.qaecy.com/enum#Location">Location</a>
    </li>
    <li>
-      <a href="#Standard" title="https://qaecy.com/dev/enum#Standard">Standard</a>
+      <a href="#MarkupFileContent" title="https://dev.qaecy.com/enum#MarkupFileContent">Markup File Content</a>
    </li>
    <li>
-      <a href="#Tender" title="https://qaecy.com/dev/enum#Tender">Tender</a>
+      <a href="#Material" title="https://dev.qaecy.com/enum#Material">Material</a>
    </li>
    <li>
-      <a href="#TextFileContent" title="https://qaecy.com/dev/enum#TextFileContent">Text File Content</a>
+      <a href="#MultimediaFileContent" title="https://dev.qaecy.com/enum#MultimediaFileContent">Multimedia File Content</a>
    </li>
    <li>
-      <a href="#Wall" title="https://qaecy.com/dev/enum#Wall">Wall</a>
+      <a href="#ObjectId" title="https://dev.qaecy.com/enum#ObjectId">Object Id</a>
    </li>
    <li>
-      <a href="#Window" title="https://qaecy.com/dev/enum#Window">Window</a>
+      <a href="#OpeningElementInterface"
+         title="https://dev.qaecy.com/enum#OpeningElementInterface">Opening Element Interface</a>
+   </li>
+   <li>
+      <a href="#Organization" title="https://dev.qaecy.com/enum#Organization">Organization</a>
+   </li>
+   <li>
+      <a href="#OtherContent" title="https://dev.qaecy.com/enum#OtherContent">Other content</a>
+   </li>
+   <li>
+      <a href="#Person" title="https://dev.qaecy.com/enum#Person">Person</a>
+   </li>
+   <li>
+      <a href="#PlanningFileContent" title="https://dev.qaecy.com/enum#PlanningFileContent">Planning File Content</a>
+   </li>
+   <li>
+      <a href="#PresentationFileContent"
+         title="https://dev.qaecy.com/enum#PresentationFileContent">Presentation File Content</a>
+   </li>
+   <li>
+      <a href="#Project" title="https://dev.qaecy.com/enum#Project">Project</a>
+   </li>
+   <li>
+      <a href="#Regulation" title="https://dev.qaecy.com/enum#Regulation">Regulation</a>
+   </li>
+   <li>
+      <a href="#Report" title="https://dev.qaecy.com/enum#Report">Report</a>
+   </li>
+   <li>
+      <a href="#Roof" title="https://dev.qaecy.com/enum#Roof">Roof</a>
+   </li>
+   <li>
+      <a href="#SafetyDocument" title="https://dev.qaecy.com/enum#SafetyDocument">Safety Document</a>
+   </li>
+   <li>
+      <a href="#Schedule" title="https://dev.qaecy.com/enum#Schedule">Schedule</a>
+   </li>
+   <li>
+      <a href="#ScriptFileContent" title="https://dev.qaecy.com/enum#ScriptFileContent">Script File Content</a>
+   </li>
+   <li>
+      <a href="#Site" title="https://dev.qaecy.com/enum#Site">Site</a>
+   </li>
+   <li>
+      <a href="#SiteBuildingInterface"
+         title="https://dev.qaecy.com/enum#SiteBuildingInterface">Site/Building Interface</a>
+   </li>
+   <li>
+      <a href="#Slab" title="https://dev.qaecy.com/enum#Slab">Slab</a>
+   </li>
+   <li>
+      <a href="#Space" title="https://dev.qaecy.com/enum#Space">Space</a>
+   </li>
+   <li>
+      <a href="#SpaceAdjacentElementInterface"
+         title="https://dev.qaecy.com/enum#SpaceAdjacentElementInterface">Space/Adjacent element Interface</a>
+   </li>
+   <li>
+      <a href="#SpaceContainedElementInterface"
+         title="https://dev.qaecy.com/enum#SpaceContainedElementInterface">Space/Contained element Interface</a>
+   </li>
+   <li>
+      <a href="#Specification" title="https://dev.qaecy.com/enum#Specification">Specification</a>
+   </li>
+   <li>
+      <a href="#SpreadsheetFileContent"
+         title="https://dev.qaecy.com/enum#SpreadsheetFileContent">Spreadsheet File Content</a>
+   </li>
+   <li>
+      <a href="#Stair" title="https://dev.qaecy.com/enum#Stair">Stair</a>
+   </li>
+   <li>
+      <a href="#Standard" title="https://dev.qaecy.com/enum#Standard">Standard</a>
+   </li>
+   <li>
+      <a href="#Storey" title="https://dev.qaecy.com/enum#Storey">Storey</a>
+   </li>
+   <li>
+      <a href="#StoreyElementInterface"
+         title="https://dev.qaecy.com/enum#StoreyElementInterface">Storey/Element Interface</a>
+   </li>
+   <li>
+      <a href="#StoreySpaceInterface" title="https://dev.qaecy.com/enum#StoreySpaceInterface">Storey/Space Interface</a>
+   </li>
+   <li>
+      <a href="#Tender" title="https://dev.qaecy.com/enum#Tender">Tender</a>
+   </li>
+   <li>
+      <a href="#TextFileContent" title="https://dev.qaecy.com/enum#TextFileContent">Text File Content</a>
+   </li>
+   <li>
+      <a href="#UnknownFileContent" title="https://dev.qaecy.com/enum#UnknownFileContent">Unknown File Content</a>
+   </li>
+   <li>
+      <a href="#VideoFileContent" title="https://dev.qaecy.com/enum#VideoFileContent">Video File Content</a>
+   </li>
+   <li>
+      <a href="#Wall" title="https://dev.qaecy.com/enum#Wall">Wall</a>
+   </li>
+   <li>
+      <a href="#Window" title="https://dev.qaecy.com/enum#Window">Window</a>
    </li>
 </ul>
