--- a/enum/provenance/provenance-en.html
+++ b/enum/provenance/provenance-en.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="head">
-<h1>Provenance for QAECY Enumerations Documentation (./data/schemas/DOCS/qcy-e)</h1>
+<h1>Provenance for QAECY Enumerations Documentation (./data/schemas/DOCS/enum)</h1>
 <ul>
 	<li>Ontology created by: Christian Frausing, Mads Holten Rasmussen, Manos Argyris</li><li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
 </ul>
