--- a/ont/provenance/provenance-en.html
+++ b/ont/provenance/provenance-en.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="head">
-<h1>Provenance for The QAECY Ontology Documentation (https://qaecy.com/dev/ont/qcy-0.0.1)</h1>
+<h1>Provenance for The QAECY Ontology Documentation (https://dev.qaecy.com/ont/0.0.1)</h1>
 <ul>
 	<li>Ontology created by: Christian Frausing, Mads Holten Rasmussen, Manos Argyris</li><li>The ontology documentation was the result of using the <a href="https://github.com/dgarijo/Widoco">Widoco tool</a> (which itself uses <a href="http://www.essepuntato.it/lode/">LODE</a> for generating the crossreference section).</li>
 </ul>
